--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ form button {
     border: none;
     font-size: 1.8rem;
     padding: 0.6rem;
+    
 }
 
 form input {
@@ -93,8 +94,9 @@ form button:hover {
     background: var(--backgound-input-button);
     color: var(--primary-color);
     font-size: 1.8rem;
-    transition: all 0.5s ease;
+    transition: all .5s ease;
     color: var(--secondary-color);
+    border-radius: 0.4rem;
 }
 
 /* appel de ma class li de mon .js*/
@@ -116,6 +118,7 @@ form button:hover {
     padding: 0.7rem;
     cursor: pointer;
     transition: var(--primary-transition);
+    border-radius: 0.4rem;
 }
 
 .check-btn:hover,
