--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ background: var(--background-color-hover);
     pointer-events: none;
 }
 
-.itemCheck {
+.achieved {
     text-decoration: line-through;
     opacity: 0.5;
 }
